(library
 (name var)
 (modules var)
 (preprocess (pps ppx_deriving.show)))

(library
 (name prim)
 (modules prim)
 (preprocess (pps ppx_deriving.show)))

(library
 (name primtype)
 (modules primtype)
 (libraries prim))

(library
 (name depth)
 (modules depth))

(library
 (name type_error)
 (modules type_error))
