(library
 (name var)
 (modules var)
 (preprocess (pps ppx_deriving.show)))

(library
 (name prim)
 (modules prim)
 (preprocess (pps ppx_deriving.show)))

(library
 (name prim_eval)
 (modules prim_eval)
 (libraries prim))

(library
 (name prim_type)
 (modules prim_type)
 (libraries prim))

(library
 (name depth)
 (modules depth))

(library
 (name type_error)
 (modules type_error))
